# Subreddit-Trend-Analysis

./: .gitignore  CMakeLists.txt  Heap.cpp  Heap.h  Readme.md  datasets.h  main.cpp  processing.ipynb  word_analysis.h
processed_data/: explainlikeimfive.csv
